# gedi-check

./: .cursorrules  .gitignore  AGENTS.md  LICENSE  azure-pipelines.yml  pyproject.toml
deploy/: .crowdstrike-blocked  gedi-proxy-startup.vbs  gedi-proxy.service  windows-task-scheduler.xml
hooks/ams/: gedi.profile.json
src/gedi_check/: __init__.py  __main__.py  cli.py  exclusions.json  n8n_notify.py  profile.py  proxy.py  triggers.py
src/gedi_check/profiles/: dev.json  prod.json
tests/: test_triggers.py
