[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gedi-check"
version = "1.0.0"
description = "GEDI guardrail — cross-tool, cross-environment AI behaviour enforcement"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "EasyWay", email = "platform@easyway.it" }]
keywords = ["gedi", "guardrail", "ai", "antifragile", "llm", "pre-commit"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.9"
dependencies = []  # zero dipendenze esterne — stdlib only

[project.urls]
Homepage = "https://github.com/hale-bopp-data/gedi-check"
Repository = "https://github.com/hale-bopp-data/gedi-check"
Documentation = "https://easyway.it/wiki/guides/gedi-check-cli"

[project.scripts]
gedi-check = "gedi_check.cli:main"
gedi-proxy = "gedi_check.proxy:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gedi_check"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
